kubernetes/apps/ronin/frontend/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ronin-frontend
  labels:
    app.kubernetes.io/name: ronin-frontend
    app.kubernetes.io/instance: ronin-frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ronin-frontend
      app.kubernetes.io/instance: ronin-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ronin-frontend
        app.kubernetes.io/instance: ronin-frontend
    spec:
      containers:
      - name: ronin-frontend
        image: ghcr.io/ronin-cg/frontend:1.0.62
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
        readinessProbe:
          httpGet:
            path: /api/zhealth
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /api/zhealth
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
      imagePullSecrets:
        - name: ghcr-login-secret
---
apiVersion: v1
kind: Service
metadata:
  name: ronin-frontend
  labels:
    app.kubernetes.io/name: ronin-frontend
spec:
  selector:
    app.kubernetes.io/name: ronin-frontend
    app.kubernetes.io/instance: ronin-frontend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 80
