kubernetes/apps/ronin/frontend/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ronin-frontend
  labels:
    app.kubernetes.io/name: ronin-frontend
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  ingressClassName: external
  rules:
  - host: dev.${SECRET_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ronin-frontend
            port:
              number: 3000
